Evening HTML/CSS commit

--- a/index.html
+++ b/index.html
@@ -12,19 +12,29 @@
     <div class="splashPage">
         <p>About Us</p>
         <div class="centerArea">
-            <h1>Affluentsy</h1>
+            <img src="./images/logo1.png">
             <h4>Luxury. Quality. Etsy.</h4>
             <form class="searchBox">
                 <input type="search">
                 <input type="submit">
             </form>
         </div>
+        <div class="downArrow">
+            <i class="fa fa-chevron-down"></i>
+        </div>
     </div>
     <div class="verticalPusher">
     </div>
     <div class="mainHeader">
-        <div class="title">AFFLUENTSY</div>
-        <div class="menuDrop">MENU</div>
+        <div class="title">
+            <img src="./images/logo.png">
+        </div>
+        <div class="menuDrop">
+            <div class="menuButton">
+                <!-- <i class="fa fa-bars"></i> -->
+                MENU
+            </div>
+        </div>
         <div class="navBar">GALLERY | CLEARANCE | RANDOM</div>
         <div class="rightSection">
             <div class="topLinks">About Us | Contact</div>
@@ -81,7 +91,9 @@
                     <div class="arrowRight"><i class="fa fa-chevron-right"></i>
                     </div>
                     <div class="imageDiv">
+                        <div class="imageDivLeft"></div>
                         <img src="http://placekitten.com/g/800/600">
+                        <div class="imageDivRight"></div>
                     </div>
                     <div class="listingTitle">
                         <h4>Insert Epic Title Here</h4>
@@ -102,7 +114,8 @@
                                 </span><i class="fa fa-star"></i><i class="fa fa-star"></i> (6)</p>
                         </div>
                     </div>
-                    <div class="uniqueness"><i>Only <em>1</em> Left!</i></div>
+                    <div class="uniqueness"><i>Only <em>1</em> Left!</i>
+                    </div>
                 </div>
             </div>
             <div class="infoContent">
