--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                 MENU
             </div>
         </div>
-        <div class="navBar">GALLERY | CLEARANCE | RANDOM</div>
+        <div class="navBar"><b>GALLERY</b> | <a href="">CLEARANCE</a> | <a href="">RANDOM</a>
+        </div>
         <div class="rightSection">
-            <div class="topLinks">About Us | Contact</div>
+            <div class="topLinks"><a href="">About Us</a> | <a href="">Contact</a>
+            </div>
             <div class="searchBar">
                 <form class="searchBox">
                     <input type="search" class="sBox">
@@ -51,7 +53,10 @@
     </div>
     <div class="contentWrapper">
         <div class="sideBar">
-            <div class="priceButton">Show Prices</div>
+            <div class="priceSection">
+                <div class="priceButton">Show Prices
+                </div>
+            </div>
             <div class="categories">
                 <ul id="Categories">Categories
                     <li>Men</li>
@@ -87,14 +92,16 @@
             <div class="leftSide">
                 <div class="imageBox">
                     <div class="shadowDiv"></div>
-                    <div class="arrowLeft"><i class="fa fa-chevron-left"></i>
-                    </div>
-                    <div class="arrowRight"><i class="fa fa-chevron-right"></i>
-                    </div>
                     <div class="imageDiv">
-                        <div class="imageDivLeft"></div>
+                        <div class="imageDivLeft">
+                            <div class="arrowLeft"><i class="fa fa-chevron-left"></i>
+                            </div>
+                        </div>
                         <img src="http://placekitten.com/g/800/600">
-                        <div class="imageDivRight"></div>
+                        <div class="imageDivRight">
+                            <div class="arrowRight"><i class="fa fa-chevron-right"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="listingTitle">
                         <h4>Insert Epic Title Here</h4>
@@ -122,8 +129,7 @@
             <div class="infoContent">
                 <div class="descriptionBox">
                     <em>Description:</em>
-                    <p>I made this for my mom. Her little 17 year old Jack Russell passed away on Dec 16 2013.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p></p>
                 </div>
                 <div class="etsyLink">
                     <a href="http://www.etsy.com">
