--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 MENU
             </div>
         </div>
-        <div class="navBar"><b>GALLERY</b> | <a href="">CLEARANCE</a> | <a href="">RANDOM</a>
+        <div class="navBar"><span class="gallery">GALLERY</span> | <span class="clearance">CLEARANCE</span> | <span class="random">RANDOM</span>
         </div>
         <div class="rightSection">
             <div class="topLinks"><a href="">About Us</a> | <a href="">Contact</a>
@@ -53,7 +53,7 @@
     </div>
     <div class="contentWrapper">
         <div class="sideBar">
-            <div class="priceSection">
+            <div class="priceSection ps_off_BG">
                 <div class="priceButton">Show Prices
                 </div>
             </div>
@@ -89,56 +89,6 @@
     <div class="listingBox" id="hoverListing">
         <div class="mask"></div>
         <div class="hoverListing">
-            <div class="leftSide">
-                <div class="imageBox">
-                    <div class="shadowDiv"></div>
-                    <div class="imageDiv">
-                        <div class="imageDivLeft">
-                            <div class="arrowLeft"><i class="fa fa-chevron-left"></i>
-                            </div>
-                        </div>
-                        <img src="http://placekitten.com/g/800/600">
-                        <div class="imageDivRight">
-                            <div class="arrowRight"><i class="fa fa-chevron-right"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="listingTitle">
-                        <h4>Insert Epic Title Here</h4>
-                        <h6>
-                            <em>Only $250,000.00</em>
-                        </h6>
-                    </div>
-                </div>
-                <div class="otherInfo">
-                    <div class="sellerBox" id="leftBox">
-                        <img src="./images/seller.jpg">
-                        <div class="sellerText">
-                            <b>Insert Seller Name</b>
-                            <br>
-                            <p>Henderson, MO.
-                                <br>Rating:
-                                <span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-                                </span><i class="fa fa-star"></i><i class="fa fa-star"></i> (6)</p>
-                        </div>
-                    </div>
-                    <div class="uniqueness"><i>Only <em>1</em> Left!</i>
-                    </div>
-                </div>
-            </div>
-            <div class="infoContent">
-                <div class="descriptionBox">
-                    <em>Description:</em>
-                    <p></p>
-                </div>
-                <div class="etsyLink">
-                    <a href="http://www.etsy.com">
-                        <div class="etsyButton">
-                            View this item on <b>Etsy</b>
-                        </div>
-                    </a>
-                </div>
-            </div>
         </div>
         <div class="closeButton"><i class="fa fa-times"></i>
         </div>
