whole lotta fixin'

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                 MENU
             </div>
         </div>
-        <div class="navBar"><span class="gallery">GALLERY</span> | <span class="clearance">CLEARANCE</span> | <span class="random">RANDOM</span>
+        <div class="navBar">
+            <span class="gallery">GALLERY</span>|
+            <span class="clearance">CLEARANCE</span>|
+            <span class="random">RANDOM</span>
         </div>
         <div class="rightSection">
             <div class="topLinks"><a href="">About Us</a> | <a href="">Contact</a>
@@ -50,23 +53,25 @@
                 </form>
             </div>
         </div>
-    </div>
-    <div class="contentWrapper">
         <div class="sideBar">
             <div class="priceSection ps_off_BG">
                 <div class="priceButton">Show Prices
                 </div>
             </div>
             <div class="categories">
-                <ul id="Categories">Categories
-                    <li>Men</li>
-                    <li>Women</li>
-                    <li>Children</li>
-                    <li>Artwork</li>
-                    <li>Jewelry</li>
-                </ul>
+                <div class="categoryCentering">
+                    <ul id="Categories">Categories
+                        <li>Men</li>
+                        <li>Women</li>
+                        <li>Children</li>
+                        <li>Artwork</li>
+                        <li>Jewelry</li>
+                    </ul>
+                </div>
             </div>
         </div>
+    </div>
+    <div class="contentWrapper">
         <div class="contentBlock">
             <div class="listingsNav none">
                 <div class="results"></div>
