added search and category functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="centerArea">
             <img src="./images/logo1.png">
             <h4>Luxury. Quality. Etsy.</h4>
-            <form class="searchBox">
+            <form class="searchBox topSearch">
                 <input type="search">
                 <input type="submit">
             </form>
@@ -45,7 +45,7 @@
             <div class="topLinks"><a href="">About Us</a> | <a href="">Contact</a>
             </div>
             <div class="searchBar">
-                <form class="searchBox">
+                <form class="searchBox" id="navSearch">
                     <input type="search" class="sBox">
                     <button type="submit" class="sButton">
                         <i class="fa fa-search"></i>
@@ -61,11 +61,14 @@
             <div class="categories">
                 <div class="categoryCentering">
                     <ul id="Categories">Categories
-                        <li>Men</li>
-                        <li>Women</li>
-                        <li>Children</li>
-                        <li>Artwork</li>
-                        <li>Jewelry</li>
+                        <li id="men">Men</li>
+                        <li id="women">Women</li>
+                        <li id="kids">Children</li>
+                        <li id="art">Artwork</li>
+                        <li id="jewelry">Jewelry</li>
+                        <li id="furniture">Furniture</li>
+                        <li id="vintage">Vintage</li>
+                        <li id="weddings">Weddings</li>
                     </ul>
                 </div>
             </div>
