working with functionality and appearance

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="./images/logo1.png">
             <h4>Luxury. Quality. Etsy.</h4>
             <form class="searchBox topSearch">
-                <input type="search">
+                <input type="search" class="topSBox">
                 <input type="submit">
             </form>
         </div>
@@ -91,6 +91,9 @@
                 </div>
             </div>
             <div class="listingsDestination">
+                <div class="spinnerDiv">
+                    <img src="../images/spinner.gif">
+                </div>
             </div>
         </div>
     </div>
