working on menu button

--- a/index.html
+++ b/index.html
@@ -31,9 +31,18 @@
             <img src="./images/logo.png">
         </div>
         <div class="menuDrop">
-            <div class="menuButton">
+            <div class="menuButtonSpace">
                 <!-- <i class="fa fa-bars"></i> -->
-                MENU
+                <div class="menuButton">
+                    MENU
+                </div> 
+                <div class="menuDroppedDown">
+                    <ul>
+                        <li class="gallery">GALLERY</li>
+                        <li class="clearance">CLEARANCE</li>
+                        <li class="random">RANDOM</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="navBar">
@@ -45,7 +54,7 @@
             <div class="topLinks"><a href="">About Us</a> | <a href="">Contact</a>
             </div>
             <div class="searchBar">
-                <form class="searchBox" id="navSearch">
+                <form class="searchBox navSearch">
                     <input type="search" class="sBox">
                     <button type="submit" class="sButton">
                         <i class="fa fa-search"></i>
