adding menu drop-down

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="menuDrop">
             <div class="menuButtonSpace">
                 <!-- <i class="fa fa-bars"></i> -->
-                <div class="menuButton">
+                <div class="menuButton" id="menuButton">
                     MENU
-                </div> 
+                </div>
                 <div class="menuDroppedDown">
                     <ul>
                         <li class="gallery">GALLERY</li>
@@ -110,7 +110,9 @@
         <div class="mask"></div>
         <div class="hoverListing">
         </div>
-        <div class="closeButton"><i class="fa fa-times"></i>
+        <div class="hoverCover">
+            <div class="closeButton"><i class="fa fa-times"></i>
+            </div>
         </div>
         <div class="shareItem">
             <div class="socialLinks">
