final commit of the evening. Added Sorting functionality

--- a/index.html
+++ b/index.html
@@ -90,11 +90,10 @@
                 <div class="sortingSection">
                     <form action="">
                         <select name="sorting">
-                            <option value="$decend">Price: High to Low</option>
-                            <option value="$ascend">Price: Low to High</option>
-                            <option value="lowAmount">Limited Items</option>
                             <option value="newest">Newest first</option>
                             <option value="oldest">Oldest first</option>
+                            <option value="$descend">Price: High to Low</option>
+                            <option value="$ascend">Price: Low to High</option>
                         </select>
                     </form>
                 </div>
