more little fixes

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
             </div>
         </div>
     </div>
+    <div class="scrollToTop">Back to Top</div>
     <script type="text/javascript" src="./js/lodash.js"></script>
     <script type="text/javascript" src="./js/jquery.js"></script>
     <script type="text/javascript" src="./js/parse-1.2.19.min.js"></script>
