--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
     <div class="contentWrapper">
         <div class="contentBlock">
-            <div class="listingsNav none">
+            <div class="listingsNav">
                 <div class="results"></div>
                 <div class="sortingSection">
                     <form action="">
@@ -105,8 +105,14 @@
             </div>
         </div>
     </div>
-    <div class="listingBox" id="hoverListing">
+    <div class="randomSpinnerSegment">
         <div class="mask"></div>
+        <div class="hoverSpinner">
+            <img src="../images/spinner.gif">
+        </div>
+    </div>
+    <div class="individualListingOff" id="individualListing">
+        <div class="mask" id="listingMask"></div>
         <div class="hoverListing">
         </div>
         <div class="hoverCover">
