--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         <li class="gallery">GALLERY</li>
                         <li class="clearance">CLEARANCE</li>
                         <li class="random">RANDOM</li>
+                        <li class="priceButton">Show Prices</li>
                     </ul>
                 </div>
             </div>
@@ -134,8 +135,8 @@
         </div>
     </div>
     <div class="scrollToTop">Back to Top</div>
-    <script type="text/javascript" src="./js/lodash.js"></script>
-    <script type="text/javascript" src="./js/jquery.js"></script>
+    <script type="text/javascript" src="./js/lodash.min.js"></script>
+    <script type="text/javascript" src="./js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="./js/parse-1.2.19.min.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 </body>
