--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="splashPage">
-        <p>About Us</p>
+        <p class="aboutLink">About Us</p>
         <div class="centerArea">
             <img src="./images/logo1.png">
             <h4>Luxury. Quality. Etsy.</h4>
